# axl-core

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: v3.1-spec.md
examples/: example_emit.py  example_parse.py  example_translate.py  example_validate.py
internal/: axl-products-and-funding.js
rosetta/: rosetta-v1.1.md  rosetta-v2.1.md  rosetta-v2.2.md  rosetta.md
src/axl/: __init__.py  cli.py  compressor.py  compressor.py.v081.bak  compressor.py.v082.bak  decompressor.py  emitter.py  models.py  parser.py  schemas.py  translator.py  validator.py
tests/: test_cli.py  test_decompressor.py  test_emitter.py  test_parser.py  test_translator.py  test_v3.py  test_v31.py  test_validator.py
tests/fixtures/: bakeoff_v31.txt
website/: index-v3.html  index.html  invest.html  products.html
whitepaper/: AXL_WHITEPAPER_v2.3.docx  AXL_WHITEPAPER_v2.3.md  AXL_WHITEPAPER_v7.md
